--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
     height: 100vh;
     color: #333;
     background-color: #fff;
+    width: 100%;
     background: url("../images/cover.jpg") no-repeat 0 0;
     background-size: cover;
     background-position: center;
